Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-34565

Rollback does not revert abort/commit to prepare

    XMLWordPrintable

Details

    • Untriaged
    • No
    • KV-Engine Mad-Hatter Beta

    Description

      Per design doc, we should revert a committed SyncWrite (or aborted?) to a prepare.

      https://docs.google.com/document/d/1DCIzCNXmm3XjkylF19zwNvxcwJFp3bLqSIsQZzTakZ0/edit#bookmark=id.l3wje6vxj5ca

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-34565
          # Subject Branch Project Status CR V

          Activity

            People

              ben.huddleston Ben Huddleston
              ben.huddleston Ben Huddleston
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty