MB-34565: Rollback SyncWrite completions to prepare

If a SyncWrite completion (commit or abort) is rolled back (but not
the prepare) then we need to add the prepare back to the HashTable
and enqueue it into the PassiveDM.

Change-Id: Ibd703b980472c26e4eb091cfbc66c410ed7e9c9a
Reviewed-on: http://review.couchbase.org/110872
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>